# ai-llm-cohort2

./: .gitignore  README.md
week_1_intro_vibe_coding/: .env.example  README.md
week_1_intro_vibe_coding/day_1/: 01-jayr-day-1.ipynb  README.md  pyproject.toml
week_1_intro_vibe_coding/day_2/: README.md
week_1_intro_vibe_coding/day_2/vibe_coding_app/: PRD.md
week_2_rag_and_evals/: README.md
week_2_rag_and_evals/day_3/: 01-jayr-Basic_RAG.ipynb  02-jayr-Production_RAG.ipynb  1_Basic_RAG.ipynb  2_Production_RAG.ipynb  README.md
week_2_rag_and_evals/day_4/: 01-jayr-ragas.ipynb  02-jayr-SDG.ipynb  README.md
week_2_rag_and_evals/day_5/: README.md
